--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esky-mock",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "假数据服务器",
   "main": "src/server",
   "bin": {
@@ -19,7 +19,8 @@
     "cookie-parser": "1.4.3",
     "express": "4.17.1",
     "mockjs": "1.0.0",
-    "multer": "1.3.0"
+    "multer": "1.3.0",
+    "path-to-regexp": "^6.1.0"
   },
   "scripts": {
     "init": "npm install -s --registry=https://registry.npm.taobao.org",
