--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esky-mock",
-  "version": "1.2.0",
+  "version": "1.1.1-ext",
   "description": "假数据服务器",
   "main": "src/server",
   "bin": {
@@ -26,10 +26,10 @@
     "init": "npm install -s --registry=https://registry.npm.taobao.org",
     "test": "node src/bin/esky-mock -p 3000 -c test/conf.js"
   },
-  "homepage": "https://github.com/esky/esky-mock",
+  "homepage": "https://github.com/leewenbil/esky-mock",
   "repository": {
     "type": "git",
-    "url": "https://github.com/esky/esky-mock.git"
+    "url": "https://github.com/leewenbil/esky-mock.git"
   },
   "engines": {
     "node": ">=4.00"
