--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "esky-mock",
-  "version": "1.1.1-regular",
+  "name": "esky-mock-regular",
+  "version": "1.2.0",
   "description": "假数据服务器",
   "main": "src/server",
   "bin": {
@@ -10,7 +10,7 @@
     "esky",
     "mock"
   ],
-  "author": "esky-and-leewenbil",
+  "author": "leewenbil",
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.19.0",
